Added map with markers, distance calculation, and route optimization.
 Users can set origin and destination markers by clicking on the map. The distance between origin and destination markers is calculated using Google Maps Distance Matrix. The code optimizes the route to find the shortest path. The resulting route is displayed using Google Maps Directions. Added a clear button to remove markers and routes from the map.

--- a/public/assets/scss/styles.scss
+++ b/public/assets/scss/styles.scss
@@ -8,6 +8,7 @@
 @use 'components/planning-section';
 @use 'components/feature-article';
 @use 'components/button';
+@use 'components/map';
 @use 'components/footer';
 
 
@@ -28,7 +29,8 @@ body {
 }
 
 main{
-    margin-top: 4rem;
+    margin-top: 6rem;
     flex-grow: 1;
+    min-width: 100%;
     max-width: 1500px;
 }
