--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 
         <section class="planning-section">
             <div>
-                <img src="/assets/images/planning.jpg" alt="Planning">
+                <img src="/public/assets/images/planning.jpg" alt="Planning">
                 <div>
                     <h3>Planning vacations has never been easier</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci praesentium id nesciunt eius facere deserunt suscipit inventore ducimus excepturi magni.</p>
@@ -21,7 +21,7 @@
 
             <section class="feature-section">
                 <div class="feature-card">
-                    <img src="/assets/images/routes.jpg" alt="img">
+                    <img src="public/assets/images/routes.jpg" alt="img">
                     <div>
                         <h4>Plan your routes</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, expedita.</p>
@@ -29,7 +29,7 @@
                 </div>
     
                 <div class="feature-card">
-                    <img src="/assets/images/routes.jpg" alt="img">
+                    <img src="public/assets/images/routes.jpg" alt="img">
                     <div>
                         <h4>Optimize your routes</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, expedita.</p>
@@ -37,7 +37,7 @@
                 </div>
     
                 <div class="feature-card">
-                    <img src="/assets/images/routes.jpg" alt="img">
+                    <img src="public/assets/images/routes.jpg" alt="img">
                     <div>
                         <h4>Import flights and hotel reservations</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, expedita.</p>
@@ -45,7 +45,7 @@
                 </div>
     
                 <div class="feature-card">
-                    <img src="/assets/images/routes.jpg" alt="img">
+                    <img src="public/assets/images/routes.jpg" alt="img">
                     <div>
                         <h4>Get personalized suggestions</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, expedita.</p>
@@ -53,7 +53,7 @@
                 </div>
     
                 <div class="feature-card">
-                    <img src="/assets/images/routes.jpg" alt="img">
+                    <img src="public/assets/images/routes.jpg" alt="img">
                     <div>
                         <h4>Collaborate with friends and family</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, expedita.</p>
@@ -62,7 +62,7 @@
                 </div>
     
                 <div class="feature-card">
-                    <img src="/assets/images/routes.jpg" alt="img">
+                    <img src="public/assets/images/routes.jpg" alt="img">
                     <div>
                         <h4>Rate places you've visited</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, expedita.</p>
