Added geolocation and a container with information about the route
Now the map is centered based on the users coordinates. Added a little info-container below the map where the total distance and time from the route is displayed.

--- a/public/assets/scss/components/_header.scss
+++ b/public/assets/scss/components/_header.scss
@@ -9,6 +9,7 @@ header {
     align-items: center;
     padding: 1rem;
     background-color: v.$primary-color;
+    opacity: 90%;
 
     .logo{        
         a{
