--- a/public/assets/scss/styles.scss
+++ b/public/assets/scss/styles.scss
@@ -8,6 +8,7 @@
 @use 'components/planning-section';
 @use 'components/feature-article';
 @use 'components/button';
+@use 'components/details-container';
 @use 'components/map';
 @use 'components/footer';
 
