--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= locals.title || 'Travel-planner' %></title>
     <link href= "/dist/css/styles.css" rel="stylesheet" type="text/css" />
+    <script src="/public/js/index.js" defer></script>
 </head>
 <body>
 
